[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/spritesheets/enemy-medium.png" type="Texture" id=1]
[ext_resource path="res://src/EnemyMedium.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.5684, 6.22496 )

[node name="EnemyMedium" type="Area2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, 9.6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.53674e-07, -4.76837e-07 )
scale = Vector2( 2.24, 1.28 )

[node name="SideTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="BurstTimer" type="Timer" parent="."]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SideTimer" to="." method="_on_SideTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
